--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 </div>
 <div class="main">
-<div class="one">
+<div class="container">
     <h1 id="min">0</h1>
 </div>
-<div class="abc"><h1>:</h1></div>
+<div class="column"><h1>:</h1></div>
 <div class="two">
     <h1 id="sec">0</h1>
 </div>
-<div class="abcd"><h1>:</h1></div>
+<div class="col-1"><h1>:</h1></div>
 <div class="three">
     <h1 id="msec">0</h1>
 </div>
