--- a/index.html
+++ b/index.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>STOP WATCH</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-<div class="timer">
-<img  src="https://cdn.pixabay.com/photo/2013/07/12/18/30/stopwatch-153398_640.png" alt="">
-<p>TIMER</p>
-
-</div>
-<div class="main">
-<div class="container">
-    <h1 id="min">0</h1>
-</div>
-<div class="column"><h1>:</h1></div>
-<div class="two">
-    <h1 id="sec">0</h1>
-</div>
-<div class="col-1"><h1>:</h1></div>
-<div class="three">
-    <h1 id="msec">0</h1>
-</div>
-</div>
-<br><br><br>
-<div class="button">
-<button id="start" onclick="start()" class="b-one">START</button>
-<button onclick="stop()" class="b-two">STOP</button>
-<button onclick="reset()" class="b-three">RESET</button>
-
-
-</div>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="timer">
+      <img
+        src="https://cdn.pixabay.com/photo/2013/07/12/18/30/stopwatch-153398_640.png"
+        alt=""
+      />
+      <p>TIMER</p>
+    </div>
+    <div class="main">
+      <div class="container">
+        <h1 id="min">0</h1>
+      </div>
+      <div class="column"><h1>:</h1></div>
+      <div class="two">
+        <h1 id="sec">0</h1>
+      </div>
+      <div class="col-1"><h1>:</h1></div>
+      <div class="three">
+        <h1 id="msec">0</h1>
+      </div>
+    </div>
+    <br /><br /><br />
+    <div class="button">
+      <button id="start" onclick="start()" class="b-one">START</button>
+      <button onclick="stop()" class="b-two">STOP</button>
+      <button onclick="reset()" class="b-three">RESET</button>
+    </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
