--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <br /><br /><br />
     <div class="button">
-      <button id="start" onclick="start()" class="b-one">START</button>
+      <button id="check" onclick="start()" class="b-one">START</button>
       <button onclick="stop()" class="b-two">STOP</button>
       <button onclick="reset()" class="b-three">RESET</button>
     </div>
